Correct spacing in resume

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ li {
 }
 
 .resumeSubSections {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .resumeRecentProjects {
